--- a/ansible/playbooks/Docker-Portainer/roles/portainer_deploy/templates/docker_compose.yml.j2
+++ b/ansible/playbooks/Docker-Portainer/roles/portainer_deploy/templates/docker_compose.yml.j2
@@ -1,6 +1,7 @@
 version: '3.3'
 services:
   portainer:
+    container_name: portainer
     image: portainer/portainer-ce:{{ portainer_version }}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
