--- a/ansible/playbooks/mySQL/roles/mySQL_deploy/templates/docker_compose.yml.j2
+++ b/ansible/playbooks/mySQL/roles/mySQL_deploy/templates/docker_compose.yml.j2
@@ -1,10 +1,13 @@
-version: '3.3'
 services:
   mysql:
-    container_name: mysql
+    container_name: mysql-{{mysql_version}}
     image: mysql:{{mysql_version}}
     restart: unless-stopped
+    networks:
+      devmacvlan:
+        ipv4_address: 192.168.50.46
     environment:
+      MYSQL_ROOT_HOST: '%'
       MYSQL_ROOT_PASSWORD: {{mysql_root_password}}
       MYSQL_DATABASE: {{mysql_database_name}}
       MYSQL_USER: {{mysql_user_name}}
@@ -16,4 +19,6 @@ services:
 volumes:
   mysql_data:
 
-  
+networks:
+  devmacvlan:
+    external: true
